; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-stmp3xxx/extr_timer.c_stmp3xxx_timer_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-stmp3xxx/extr_timer.c_stmp3xxx_timer_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 (%struct.clock_event_device*)* }

@REGS_TIMROT_BASE = common dso_local global i64 0, align 8
@HW_TIMROT_TIMCTRL0 = common dso_local global i64 0, align 8
@BM_TIMROT_TIMCTRLn_IRQ = common dso_local global i32 0, align 4
@HW_TIMROT_TIMCTRL1 = common dso_local global i64 0, align 8
@BM_TIMROT_TIMCTRLn_IRQ_EN = common dso_local global i32 0, align 4
@HW_TIMROT_TIMCOUNT1 = common dso_local global i64 0, align 8
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @stmp3xxx_timer_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stmp3xxx_timer_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.clock_event_device*
  store %struct.clock_event_device* %7, %struct.clock_event_device** %5, align 8
  %8 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %9 = load i64, i64* @HW_TIMROT_TIMCTRL0, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @__raw_readl(i64 %10)
  %12 = load i32, i32* @BM_TIMROT_TIMCTRLn_IRQ, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %2
  %16 = load i32, i32* @BM_TIMROT_TIMCTRLn_IRQ, align 4
  %17 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %18 = load i64, i64* @HW_TIMROT_TIMCTRL0, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @stmp3xxx_clearl(i32 %16, i64 %19)
  %21 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %22 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %21, i32 0, i32 0
  %23 = load i32 (%struct.clock_event_device*)*, i32 (%struct.clock_event_device*)** %22, align 8
  %24 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %25 = call i32 %23(%struct.clock_event_device* %24)
  br label %50

26:                                               ; preds = %2
  %27 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %28 = load i64, i64* @HW_TIMROT_TIMCTRL1, align 8
  %29 = add nsw i64 %27, %28
  %30 = call i32 @__raw_readl(i64 %29)
  %31 = load i32, i32* @BM_TIMROT_TIMCTRLn_IRQ, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %49

34:                                               ; preds = %26
  %35 = load i32, i32* @BM_TIMROT_TIMCTRLn_IRQ, align 4
  %36 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %37 = load i64, i64* @HW_TIMROT_TIMCTRL1, align 8
  %38 = add nsw i64 %36, %37
  %39 = call i32 @stmp3xxx_clearl(i32 %35, i64 %38)
  %40 = load i32, i32* @BM_TIMROT_TIMCTRLn_IRQ_EN, align 4
  %41 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %42 = load i64, i64* @HW_TIMROT_TIMCTRL1, align 8
  %43 = add nsw i64 %41, %42
  %44 = call i32 @stmp3xxx_clearl(i32 %40, i64 %43)
  %45 = load i64, i64* @REGS_TIMROT_BASE, align 8
  %46 = load i64, i64* @HW_TIMROT_TIMCOUNT1, align 8
  %47 = add nsw i64 %45, %46
  %48 = call i32 @__raw_writel(i32 65535, i64 %47)
  br label %49

49:                                               ; preds = %34, %26
  br label %50

50:                                               ; preds = %49, %15
  %51 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %51
}

declare dso_local i32 @__raw_readl(i64) #1

declare dso_local i32 @stmp3xxx_clearl(i32, i64) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
